--- a/Dolacna.Webpage/ClientApps/webpage/public/locale/sk/translation.json
+++ b/Dolacna.Webpage/ClientApps/webpage/public/locale/sk/translation.json
@@ -57,7 +57,9 @@
     "heading": "Odomknite pokročilé",
     "headingAccent": "nákupné funkcie",
     "subheading": "Objavte, čo prichádza s naším prémiovým predplatným na maximalizáciu úspor pri každom nákupe.",
-    "betaSubheading": "Začnite s našou bezplatnou beta verziou a buďte prvý, kto zažije prémiové funkcie, keď sa spustia čoskoro.",
+    "betaSubheading": "Začnite s našou bezplatnou testovacou fázou a buďte prvý, kto zažije prémiové funkcie, keď sa spustia čoskoro.",
+    "contactForTesting": "Kontaktujte nás pre testovanie",
+    "freePhaseBadge": "Bezplatná testovacia fáza • Premium čoskoro",
     "recommended": "Odporúčané",
     "trialNote": "Všetky plány zahŕňajú 7-dňovú bezplatnú skúšobnú verziu. Možnosť zrušiť kedykoľvek.",
     "whyGoPremium": {
@@ -67,18 +69,22 @@
         "title": "Neobmedzené vyhľadávanie",
         "description": "Vyhľadávajte akýkoľvek produkt bez denných limitov"
       },
-      "smartRecommendations": {
-        "title": "Inteligentné odporúčania",
-        "description": "Získajte personalizované odporúčania obchodov a produktov"
+      "smartShoppingList": {
+        "title": "Inteligentné nákupné zoznamy",
+        "description": "Vytvárajte inteligentné nákupné zoznamy s automatickou optimalizáciou"
+      },
+      "discountNotifications": {
+        "title": "Upozornenia na zľavy",
+        "description": "Dostávajte okamžité upozornenia, keď vaše obľúbené produkty sú v akcii"
       }
     },
     "plans": {
       "currentAndFuture": "Aktuálne a budúce plány",
-      "currentAndFutureSubheading": "Začnite s našou bezplatnou beta verziou dnes, prémiové funkcie prichádzajú čoskoro",
+      "currentAndFutureSubheading": "Začnite s našou bezplatnou testovacou verziou dnes, prémiové funkcie prichádzajú čoskoro",
       "freeBeta": {
-        "name": "Bezplatná beta",
-        "description": "Pomôžte nám testovať a zlepšovať základné funkcie",
-        "cta": "Pripojiť sa k beta testu",
+        "name": "Bezplatné testovanie",
+        "description": "Pomôžte nám testovať a zlepšovať základné funkcie počas našej testovacej fázy",
+        "cta": "Pripojiť sa k testovacej fáze",
         "badge": "DOSTUPNÉ TERAZ"
       },
       "free": {
@@ -89,28 +95,26 @@
       "premium": {
         "name": "Premium",
         "period": "mesačne",
-        "description": "Pokročilé funkcie prichádzajú čoskoro",
+        "description": "Pokročilé funkcie pre serióznych nakupujúcich",
         "cta": "Dozvedieť sa viac o Premium",
         "badge": "ČOSKORO"
       }
     },
     "features": {
-      "searchCompare": "Vyhľadávanie a porovnanie cien",
-      "limitedViews": "Zobrazenie až 5 produktov denne",
-      "basicHistory": "Základná história cien (7 dní)",
+      "limitedProductSearch": "Obmedzené vyhľadávanie produktov",
+      "basicPriceHistory": "Základná história cien (obmedzený čas)",
       "betaTestingAccess": "Prístup k beta testovaniu",
       "communityFeedback": "Spätná väzba komunity",
+      "unlimitedSearch": "Neobmedzené vyhľadávanie produktov",
       "shoppingList": "Funkcia nákupného zoznamu",
-      "dealAlerts": "Upozornenia na zľavy",
-      "unlimitedSearches": "Neobmedzené vyhľadávanie produktov",
-      "fullHistory": "Kompletná história cien (90 dní)",
-      "smartLists": "Inteligentné nákupné zoznamy",
-      "fullAlerts": "Upozornenia na zľavy pre akýkoľvek produkt",
-      "recommendations": "Odporúčania obchodov"
+      "smartShoppingList": "Inteligentné nákupné zoznamy",
+      "discountNotifications": "Upozornenia na zľavy",
+      "extendedPriceHistory": "Rozšírená história cien",
+      "prioritySupport": "Prioritná podpora"
     },
     "featureComparison": {
       "heading": "Porovnanie funkcií",
-      "subheading": "Pozrite si presne, co dostanete s každým plánom",
+      "subheading": "Pozrite si presne, čo dostanete s každým plánom",
       "features": "Funkcie",
       "free": "Zdarma",
       "premium": "Premium"
@@ -120,52 +124,52 @@
       "subheading": "Pozrite si, čo prichádza ďalej, keď pokračujeme v zlepšovaní vášho nákupného zážitku",
       "phase1": {
         "title": "Fáza 1",
-        "subtitle": "Bezplatná testovacia verzia",
+        "subtitle": "Bezplatná testovacia fáza",
         "badge": "AKTUÁLNE",
         "availableNow": "Dostupné teraz",
         "features": {
-          "corePriceComparison": "Základné porovnanie cien",
-          "basicSearchFunctionality": "Základná vyhľadávacia funkcionalita",
-          "essentialShopping": "Základné nákupné funkcie",
-          "feedbackCollection": "Zbieranie spätnej väzby od používateľov"
+          "productSearch": "Funkcia vyhľadávania produktov",
+          "shoppingListTesting": "Testovanie nákupných zoznamov",
+          "basicPriceHistory": "Základná história cien",
+          "contactForTesting": "Kontaktujte nás pre prístup k testovaniu"
         }
       },
       "phase2": {
         "title": "Fáza 2",
-        "subtitle": "Prémiové funkcie",
+        "subtitle": "Spustenie Premium",
         "badge": "ČOSKORO",
         "timeline": "Prichádza čoskoro",
         "features": {
-          "unlimitedSearches": "Neobmedzené vyhľadávanie",
-          "advancedPriceTracking": "Pokročilé sledovanie cien",
-          "smartShoppingLists": "Inteligentné nákupné zoznamy",
-          "personalizedAlerts": "Personalizované upozornenia"
+          "unlimitedSearch": "Neobmedzené vyhľadávanie produktov",
+          "smartShoppingList": "Inteligentné nákupné zoznamy",
+          "discountNotifications": "Upozornenia na zľavy",
+          "extendedPriceHistory": "Rozšírená história cien"
         }
       },
       "phase3": {
         "title": "Fáza 3",
-        "subtitle": "Inovácie dopredu",
+        "subtitle": "Rozšírenie a inovácie",
         "badge": "BUDÚCNOSŤ",
         "timeline": "Budúcnosť čaká...",
         "features": {
-          "aiRecommendations": "AI-poháňané odporúčania",
-          "communityFeatures": "Komunitné funkcie",
-          "smartMealPlanning": "Inteligentné plánovanie jedál",
-          "innovativeSurprises": "Inovatívne prekvapenia"
+          "moreSupermarkets": "Integrácia ďalších supermarketov",
+          "moreProducts": "Viac produktov pre lepšie porovnanie",
+          "newFeatures": "Nové funkcie na základe diskusie",
+          "customerFeedback": "Implementácia spätnej väzby zákazníkov"
         }
       },
       "bePartOfJourney": {
         "heading": "Buďte súčasťou našej cesty",
         "description": "Začnite s našou bezplatnou testovacou verziou dnes a pomôžte formovať budúcnosť inteligentného nakupovania na Slovensku.",
-        "cta": "Pripojiť sa k beta testu"
+        "cta": "Pripojiť sa k testovacej fáze"
       }
     },
     "callToAction": {
       "heading": "Začnite svoju cestu inteligentného nakupovania",
-      "description": "Pripojte sa k našej bezplatnej beta testovacej fáze a pomôžte nám budovať budúcnosť nákupu potravín na Slovensku. Prémiové funkcie čoskoro!",
-      "joinBetaTest": "Pripojiť sa k beta testu",
-      "learnMore": "Dozvedieť sa viac",
-      "footer": "Bezplatná testovacia verzia • Prémiové funkcie čoskoro • Bez záväzkov"
+      "description": "Pripojte sa k našej bezplatnej testovacej fáze a pomôžte nám budovať budúcnosť nákupu potravín na Slovensku. Kontaktujte nás, ak máte záujem o testovanie!",
+      "joinTesting": "Pripojiť sa k testovacej fáze",
+      "contactUs": "Kontaktujte nás",
+      "footer": "Bezplatná testovacia verzia • Prémiové funkcie čoskoro"
     }
   },
 
@@ -366,7 +370,8 @@
       }
     ],
     "searchPlaceholder": "Vyhľadajte kroky alebo funkcie...",
-    "noResults": "Nenašli sa žiadne výsledky."
+    "noResults": "Nenašli sa žiadne výsledky.",
+    "learnMoreDetails": "Zobraziť viac detailov"
   },
 
   "privacyPolicy": {
@@ -495,7 +500,7 @@
     "subtitle": "Nájdite odpovede na najčastejšie otázky o Ušetri Slovensko. Nenašli ste to, čo hľadáte? Kontaktujte náš tím podpory.",
     "contactTitle": "Stále máte otázky?",
     "contactDescription": "Nemôžete nájsť odpoveď, ktorú hľadáte? Náš priateľský tím podpory vám rád pomôže.",
-    "contactButton": "Kontaktovať podporu",
+    "contactButton": "Kontaktuje nás",
     "general": {
       "title": "Všeobecné otázky",
       "q1": {
@@ -508,11 +513,11 @@
       },
       "q3": {
         "question": "Ktoré supermarkety pokrývate?",
-        "answer": "V súčasnosti pokrývame viac ako 4 hlavné reťazce supermarketov na Slovensku, vrátane najpopulárnejších obchodov s potravinami. Kontinuálne pracujeme na rozšírení nášho pokrytia o ďalších predajcov."
+        "answer": "V súčasnosti pokrývame Tesco, Billa, Kaufland a Lidl v bratislavskom regióne. Kontinuálne pracujeme na rozšírení nášho pokrytia o ďalších predajcov a regióny."
       },
       "q4": {
-        "question": "Aké presné sú ceny?",
-        "answer": "Naše cenové údaje aktualizujeme denne, aby sme zabezpečili presnosť. Ceny sa však môžu zmeniť v obchode a odporúčame overiť si ceny pri platení. Snažíme sa udržať 99% presnosť našich cenových informácií."
+        "question": "Ako často sa ceny aktualizujú?",
+        "answer": "Naše ceny sú kontrolované a aktualizované týždenne, aby ste mali aktuálne cenové informácie. Ceny sa však môžu zmeniť v obchode medzi aktualizáciami a odporúčame overiť si ceny pri platení."
       }
     },
     "app": {
@@ -538,26 +543,26 @@
       "title": "Ceny a Premium",
       "q1": {
         "question": "Je aplikácia bezplatná?",
-        "answer": "Áno, základná verzia Ušetri Slovensko je úplne bezplatná a zahŕňa porovnávanie cien, základné nákupné zoznamy a funkciu vyhľadávania produktov."
+        "answer": "Aplikácia je bezplatná pre kontrolu obmedzeného množstva produktov. To vám umožní vyskúšať našu službu a vidieť hodnotu, ktorú poskytujeme, pred upgradom."
       },
       "q2": {
         "question": "Aké dodatočné funkcie ponúka Premium?",
-        "answer": "Prémioví predplatitelia získajú pokročilé funkcie ako neobmedzené nákupné zoznamy, podrobné analýzy histórie cien, prioritnú zákaznícku podporu, pokročilé upozornenia na ponuky a exkluzívne zľavy od partnerských obchodov."
+        "answer": "Premium verzia zahŕňa neobmedzené vyhľadávanie, funkciu nákupného zoznamu, dlhšiu históriu cien a upozornenia na zľavy. Tieto funkcie vám pomôžu maximalizovať úspory a efektívnejšie spravovať nákupy."
       },
       "q3": {
         "question": "Koľko stojí Premium?",
-        "answer": "Naše prémiové predplatné má konkurencieschopnú cenu, ktorá poskytuje vynikajúcu hodnotu. Navštívte našu Premium stránku pre aktuálne ceny a možnosti predplatného. Často ponúkame špeciálne akcie pre nových používateľov."
+        "answer": "Naše prémiové predplatné má konkurencieschopnú cenu, ktorá poskytuje vynikajúcu hodnotu. Navštívte našu <a href='/Premium' class='text-brand-accent hover:text-brand-accent/80 underline'>Premium stránku</a> pre aktuálne ceny a možnosti predplatného. Často ponúkame špeciálne akcie pre nových používateľov."
       }
     },
     "technical": {
       "title": "Technická podpora",
       "q1": {
         "question": "Ktoré zariadenia sú podporované?",
-        "answer": "Naša aplikácia je dostupná pre zariadenia iOS aj Android. Máme aj webovú verziu, ktorá funguje v akomkoľvek modernom prehliadači, čím je prístupná z počítačov a tabletov."
+        "answer": "Naša aplikácia je dostupná pre mobilné zariadenia iOS aj Android. Zameriavame sa na poskytovanie najlepšieho mobilného zážitku pre porovnávanie cien na cestách."
       },
       "q2": {
         "question": "Mám problémy s aplikáciou. Čo mám robiť?",
-        "answer": "Najprv skúste reštartovať aplikáciu alebo skontrolovať internetové pripojenie. Ak problém pretrváva, kontaktujte náš tím podpory cez aplikáciu alebo e-mailom. Uveďte podrobnosti o vašom zariadení a probléme, ktorý zažívate."
+        "answer": "Najprv skúste reštartovať aplikáciu alebo skontrolovať internetové pripojenie. Ak problém pretrváva, prosím <a href='/Contact' class='text-brand-accent hover:text-brand-accent/80 underline'>kontaktujte nás</a> s podrobnosťami o vašom zariadení a probléme, ktorý zažívate."
       },
       "q3": {
         "question": "Ako aktualizujem aplikáciu?",
