feat: add LinkedIn profiles for team members and update Header with About Us link

--- a/Dolacna.Webpage/ClientApps/webpage/public/locale/en/translation.json
+++ b/Dolacna.Webpage/ClientApps/webpage/public/locale/en/translation.json
@@ -293,19 +293,23 @@
     "members": [
       {
         "name": "Adam Martiška",
-        "role": "CEO / Frontend Developer"
+        "role": "CEO / Frontend Developer",
+        "linkedin": "https://linkedin.com/in/adam-martiska"
       },
       {
         "name": "Juraj Paška",
-        "role": "Backend Developer"
+        "role": "Backend Developer",
+        "linkedin": "https://linkedin.com/in/juraj-paska"
       },
       {
         "name": "Martin Lauš",
-        "role": "UI/UX Designer"
+        "role": "UI/UX Designer",
+        "linkedin": "https://linkedin.com/in/martin-laus"
       },
       {
         "name": "Róbert Jačko",
-        "role": "AI Engineer"
+        "role": "AI Engineer",
+        "linkedin": "https://linkedin.com/in/robert-jacko"
       }
     ]
   },
