feat: update logo and favicon; improve header and section styles; update team member LinkedIn links; enhance responsiveness and visual hierarchy

--- a/Dolacna.Webpage/ClientApps/webpage/public/locale/sk/translation.json
+++ b/Dolacna.Webpage/ClientApps/webpage/public/locale/sk/translation.json
@@ -292,22 +292,22 @@
       {
         "name": "Adam Martiška",
         "role": "CEO / Frontend vývojár",
-        "linkedin": "https://www.linkedin.com/in/adam-martiska/"
+        "linkedin": "https://www.linkedin.com/in/adam-marti%C5%A1ka-aab913197/"
       },
       {
         "name": "Juraj Paška",
         "role": "Backend vývojár",
-        "linkedin": "https://www.linkedin.com/in/juraj-paska/"
+        "linkedin": "https://www.linkedin.com/in/juraj-pa%C5%A1ka-5277531a9/"
       },
       {
         "name": "Martin Lauš",
         "role": "UI/UX dizajnér",
-        "linkedin": "https://www.linkedin.com/in/martin-laus/"
+        "linkedin": "https://www.linkedin.com/in/martin-lau%C5%A1-74a047234/"
       },
       {
         "name": "Róbert Jačko",
         "role": "AI inžinier",
-        "linkedin": "https://www.linkedin.com/in/robert-jacko/"
+        "linkedin": "https://www.linkedin.com/in/r%C3%B3bert-ja%C4%8Dko-a695721a0/"
       }
     ]
   },
