fix: update translation for grocery prices and enhance i18n configuration

--- a/Dolacna.Webpage/ClientApps/webpage/public/locale/en/translation.json
+++ b/Dolacna.Webpage/ClientApps/webpage/public/locale/en/translation.json
@@ -1,6 +1,6 @@
 {
   "save_money": "Save money on every shopping trip",
-  "compare_prices": "Compare grocery prices across Slovakia",
+  "compare_prices": "Compare grocery prices",
   "across_slovakia": "across Slovakia",
   "description": "Ušetri Slovensko finds the best deals on groceries by comparing prices at multiple supermarkets in real-time.",
   "download_now": "Download Now",
