feat: update image assets for iPhone mockups; remove outdated images and add new ones

--- a/Dolacna.Webpage/ClientApps/webpage/public/locale/sk/translation.json
+++ b/Dolacna.Webpage/ClientApps/webpage/public/locale/sk/translation.json
@@ -26,7 +26,7 @@
   "features": {
     "heading": "Každá funkcia, ktorú potrebujete na",
     "headingAccent": "Ušetrenie peňazí",
-    "subheading": "Naša aplikácia je navrhnutá tak, aby bol nákup potravín efektívnejší a úspornejší, s chytr7mi nástrojmi, ktoré vám pomôžu maximalizovať úspory.",
+    "subheading": "Naša aplikácia je navrhnutá tak, aby bol nákup potravín efektívnejší a úspornejší, s chytrými nástrojmi, ktoré vám pomôžu maximalizovať úspory.",
     "searchCompare": {
       "title": "Vyhľadávanie a porovnanie",
       "description": "Jednoducho vyhľadajte produkty a porovnajte ceny v rôznych supermarketoch na Slovensku."
