--- a/Dolacna.Webpage/ClientApps/webpage/public/locale/en/translation.json
+++ b/Dolacna.Webpage/ClientApps/webpage/public/locale/en/translation.json
@@ -232,6 +232,12 @@
       "downloadOn": "Download on the",
       "getItOn": "Get it on",
       "trustedBy": "Trusted by 10,000+ users across Slovakia"
+    },
+    "releaseBanner": {
+      "heading": "Full launch planned for",
+      "date": "December 2025",
+      "description": "App Store and Google Play download links will be available at release.",
+      "disabledTooltip": "Coming December 2025"
     }
   },
 
